--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@cmds/select": "^0.2.0",
+    "emotion": "^10.0.6"
+  },
   "peerDependencies": {
     "react": "16.x"
   },
